fix: z-index

--- a/components/Sidebar/Sidebar.module.css
+++ b/components/Sidebar/Sidebar.module.css
@@ -48,7 +48,7 @@
 	border: 0;
 	cursor: pointer !important;
 	display: flex;
-	z-index: 10;
+	z-index: 4;
 	align-items: center;
 	justify-content: center;
 	top: 50%;
